Bug fix. Issue 139. Pop up text now truncates very long strings.
Former-commit-id: 9871667a802562da01faa1c46f007061c0a108ab

--- a/css/igv.css
+++ b/css/igv.css
@@ -848,15 +848,16 @@ div.ui-dialog fieldset {
     top: 0;
     left: 0;
 
-    width: 100%;
-    max-width: 100%;
-
+    /*width: 100%;*/
+    /*max-width: 384px;*/
     max-height: 384px;
 
     overflow-x: hidden;
     overflow-y: auto;
 
-    margin-right: 24px;
+    /*text-overflow: ellipsis;*/
+
+    /*margin-right: 24px;*/
 
 }
 
@@ -877,6 +878,8 @@ div.ui-dialog fieldset {
     cursor: default;
     text-wrap: none;
     white-space:nowrap;
+
+    max-width: 384px;
 
 }
 
